# VideoCap

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  VideoCap.rc  VideoDevice.cpp  VideoDevice.h  VideoFileWriter.cpp  VideoFileWriter.h  VideoStreamRender.cpp  VideoStreamRender.h  WinMsgHandle.cpp  WinMsgHandle.h  main.cpp  make_installer.bat  resource.h
7z/: config.txt
DShowBase/: ctlutil.h  outputq.cpp  streams.h  transip.cpp
include/: BaseSettings.h  Console.h  MainWindow.h  RenderWin.h  Shapes.h  Shortcut.h  VideoCapController.h  VideoCapWin.h  VideoCapture.h  VideoFileWriter.h  VideoStreamRender.h  WinMsgHandle.h  resource.h
resources/: VideoCap.rc
src/: BaseSettings.cpp  MainWindow.cpp  Shapes.cpp  VideoCapController.cpp  VideoCapWin.cpp  VideoCapture.cpp  VideoFileWriter.cpp  VideoStreamRender.cpp  WinMsgHandle.cpp  main.cpp
test/: TestBaseSettings.cpp  VideoCap.json  test.json
